# srt-game-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.yaml  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/workspace-setup/: launch.json  tasks.json
CMSTest/: Addressbook.cpp  Addressbook.h  B2DPod.cpp  B2DPod.h  B2DWorld.cpp  B2DWorld.h  CMSTest.1  Command.cs  Command.pb.cc  Command.pb.h  DualStick.pb.cc  DualStick.pb.h  DualStick.proto  Heartbeat.cpp  Heartbeat.h  Input.cpp  Input.h  Player.cpp  Player.h  PublisherT.cpp  PublisherT.h  Security.cpp  Security.h  Server.cpp  Server.h  SimpleAsyncConsumer.cpp  SimpleAsyncConsumer.h  SimpleAsyncProducer.cpp  SimpleAsyncProducer.h  Timer.h  Types.h  addressbook.pb.cc  addressbook.pb.h  b2dJson.h  box2d.pb.cc  box2d.pb.h  box2d.proto  main.cpp
CMSTest.xcodeproj/: project.pbxproj
CMSTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CMSTest.xcodeproj/project.xcworkspace/xcuserdata/rkieley.xcuserdatad/: UserInterfaceState.xcuserstate
CMSTest.xcodeproj/xcuserdata/rkieley.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
CMSTest.xcodeproj/xcuserdata/rkieley.xcuserdatad/xcschemes/: CMSTest.xcscheme  (+1 more)
CMSTest/Application/: Heartbeat.cpp  Heartbeat.h  MessageConsumer.cpp  MessageConsumer.h  MessageDispatcher.cpp  MessageDispatcher.h  Messenger.cpp  Messenger.h  Messenger_Consumer.cpp  Messenger_Consumer.h  Messenger_Producer.cpp  Messenger_Producer.h  Security.cpp  Security.h  SecurityCommand.cpp  SecurityCommand.h  Server.cpp  Server.h  main.cpp
CMSTest/Commands/: ACommand.cpp  ACommand.h  CommandConsumer.cpp  CommandConsumer.h  CommandQueue.cpp  CommandQueue.h  DualStickRawInputCommand.cpp  DualStickRawInputCommand.h  JoinSecurityCommand.cpp  JoinSecurityCommand.h  LeaveSecurityCommand.cpp  LeaveSecurityCommand.h  RawInputCommand.cpp  RawInputCommand.h  SecurityCommand.cpp  SecurityCommand.h  SecurityCommandBufferFactory.cpp  SecurityCommandBufferFactory.h
CMSTest/Events/: EntityGameEventFactory.h  EventDispatcher.cpp  EventDispatcher.h  SecurityGameEventFactory.cpp  SecurityGameEventFactory.h
CMSTest/Game/: AB2DBodyDefinition.cpp  AB2DBodyDefinition.h  AB2DEntity.cpp  AB2DEntity.h  AEntity.cpp  AEntity.h  B2DBullet.cpp  B2DBullet.h  B2DBulletFactory.h  B2DPod.cpp  B2DPod.h  B2DPodFactory.h  B2DWorld.cpp  B2DWorld.h  B2DWorld_BuildT.h  Bullet.cpp  Bullet.h  BulletFactory.cpp  BulletFactory.h  CommandConsumer.cpp  CommandConsumer.h  CommandQueue.cpp  CommandQueue.h  EntityData.cpp  EntityData.h  EntityGameEventFactory.cpp  EntityGameEventFactory.h  EventConsumer.cpp  EventConsumer.h  EventDispatcher.cpp  EventDispatcher.h  EventDispatcherFactory.cpp  EventDispatcherFactory.h  Input.cpp  Input.h  Player.cpp  Player.h  Pod.cpp  Pod.h  PodFactory.cpp  (+8 more)
CMSTest/Network/: MessageConsumer.cpp  MessageConsumer.h  MessageDispatcher.cpp  MessageDispatcher.h  SimpleAsyncConsumer.cpp  SimpleAsyncConsumer.h  SimpleAsyncProducer.h
CMSTest/Proto/: Command.pb.cc  Command.pb.h  Command.proto  CommandBuffer.pb.cc  CommandBuffer.pb.h  CommandBuffer.proto  DualStickRawInputCommand.pb.cc  DualStickRawInputCommand.pb.h  DualStickRawInputCommand.proto  DualStickRawInputCommandBuffer.pb.cc  DualStickRawInputCommandBuffer.pb.h  DualStickRawInputCommandBuffer.proto  EntityGameEvent.pb.cc  EntityGameEvent.pb.h  EntityGameEvent.proto  EntityGameEventBuffer.pb.cc  EntityGameEventBuffer.pb.h  EntityGameEventBuffer.proto  GameEvent.pb.cc  GameEvent.pb.h  GameEvent.proto  GameEventBuffer.pb.cc  GameEventBuffer.pb.h  GameEventBuffer.proto  RawInputCommand.pb.cc  RawInputCommand.pb.h  RawInputCommand.proto  RawInputCommandBuffer.pb.cc  RawInputCommandBuffer.pb.h  RawInputCommandBuffer.proto  SecurityCommand.pb.cc  SecurityCommand.pb.h  SecurityCommand.proto  SecurityCommandBuffer.pb.cc  SecurityCommandBuffer.pb.h  SecurityCommandBuffer.proto  box2d.pb.cc  box2d.pb.h  box2d.proto
CMSTest/Shared/: ACommand.cpp  ACommand.h  FactoryT.h  MakeT.h  SimpleAsyncConsumer.cpp  SimpleAsyncProducer.cpp  SimpleAsyncProducer.h  Timer.cpp  Types.h
containerbuild/: Dockerfile  srt.repo
deploy/: srt-game-server-config-configmap.yaml  srt-game-server-deployment.yaml
docs/: client-server.md
etc/: config.yaml
src/Application/: Config.cpp  Config.h  Configuration.cpp  Configuration.h  Heartbeat.cpp  Heartbeat.h  Server.cpp  Server.h  main.cpp
src/Commands/: ACommand.cpp  ACommand.h  CommandConsumer.cpp  CommandConsumer.h  CommandQueue.cpp  CommandQueue.h  DualStickRawInputCommand.cpp  DualStickRawInputCommand.h  JoinSecurityCommand.cpp  JoinSecurityCommand.h  LeaveSecurityCommand.cpp  LeaveSecurityCommand.h  RawInputCommand.cpp  RawInputCommand.h  SecurityCommand.cpp  SecurityCommand.h  SecurityCommandBufferFactory.cpp  SecurityCommandBufferFactory.h
src/Events/: EntityGameEventFactory.cpp  EntityGameEventFactory.h  EventDispatcher.cpp  EventDispatcher.h  SecurityGameEventFactory.h
src/Game/: AB2DEntity.cpp  AB2DEntity.h  AEntity.cpp  AEntity.h  B2DBullet.cpp  B2DBullet.h  B2DBulletFactory.h  B2DPod.cpp  B2DPod.h  B2DPodFactory.h  B2DWorld.cpp  B2DWorld.h  Bullet.cpp  Bullet.h  BulletFactory.h  Input.cpp  Input.h  Pod.cpp  Pod.h  PodFactory.cpp  PodFactory.h  World.cpp  World.h  b2dJson.cpp  b2dJson.h
src/Network/: MessageConsumer.cpp  MessageConsumer.h  MessageDispatcher.cpp  MessageDispatcher.h  ProtonConsumer.cpp  ProtonConsumer.h  SimpleAsyncConsumer.cpp  SimpleAsyncConsumer.h  SimpleAsyncProducer.cpp  SimpleAsyncProducer.h  closed.cpp  closed.h  receiver.cpp  receiver.h  sender.cpp  sender.h
src/Proto/: CommandBuffer.pb.cc  CommandBuffer.pb.h  CommandBuffer.proto  DualStickRawInputCommandBuffer.pb.cc  DualStickRawInputCommandBuffer.pb.h  EntityGameEventBuffer.pb.cc  EntityGameEventBuffer.pb.h  GameEventBuffer.pb.cc  GameEventBuffer.pb.h  RawInputCommandBuffer.pb.cc  RawInputCommandBuffer.pb.h  RawInputCommandBuffer.proto  SecurityCommandBuffer.pb.cc  SecurityCommandBuffer.pb.h  SecurityCommandBuffer.proto  box2d.pb.cc  box2d.pb.h
src/Shared/: FactoryT.h  MakeT.h  Strings.h  Timer.cpp  Timer.h
